<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_one_text"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/task_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_one_button"
            android:textAllCaps="false"
            android:background="@color/colorPrimary"
            android:layout_marginTop="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_two_text"
            android:textSize="18sp"
            android:layout_marginTop="30dp"/>

        <Button
            android:id="@+id/task_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_two_button"
            android:textAllCaps="false"
            android:background="@color/colorPrimary"
            android:layout_marginTop="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_three_text"
            android:textSize="18sp"
            android:layout_marginTop="30dp"/>

        <Button
            android:id="@+id/task_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_three_button"
            android:textAllCaps="false"
            android:background="@color/colorPrimary"
            android:layout_marginTop="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="@color/colorWhite"/>

    </LinearLayout>

</RelativeLayout>